--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -14,7 +14,7 @@
             "ville": "Ciudad",
             "pays": "Pays (Haga clic aquí para seleccionar un país)",
             "infoMontPaiement": "Información de la cantidad",
-            "montant": "Pagamento????",
+            "montant": "Pagamento",
             "numRef": "Número de referencia (no debe contener espacios entre números)",
             "infoFacture": "Información de la factura (opcional)",
             "infoSupp": "Información adicional: (Opcional)",
@@ -38,13 +38,13 @@
             "infosupp": "La información no estructurada se puede utilizar para indicar un motivo de pago o para información textual adicional sobre pagos con una referencia estructurada. 56 caracteres como máximo."    
         },
         "alert": {   
-            "nom": "El campo 'Nombre' es obligatorio.",
-            "rue": "El campo 'Calle' es obligatorio.",
-            "numDeRue": "El campo 'Número de calle' es obligatorio.",
-            "codePostal": "El campo 'Código postal' es obligatorio.",
-            "ville": "El campo 'Ciudad' es obligatorio.",
-            "pays": "Por favor seleccione un país",
-            "montant": "El campo 'Cantidad' es obligatorio.",
+            "nom": "El Nombre es obligatorio.",
+            "rue": "El Calle es obligatorio.",
+            "numDeRue": "El Número de calle es obligatorio.",
+            "codePostal": "El Código postal es obligatorio.",
+            "ville": "El Ciudad es obligatorio.",
+            "pays": "La selección del país es obligatoria",
+            "montant": "El Cantidad es obligatorio.",
             "numRef": "El número de referencia es obligatorio."
         },
         "lang": {
