--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -9,16 +9,16 @@
             "debiteur": "Debitore",
             "nom": "Nome",
             "rue": "Strada",
-            "numDeRue": "civico",
-            "codePostal": "codice postale",
-            "ville": "città",
+            "numDeRue": "Civico",
+            "codePostal": "Codice postale",
+            "ville": "Città",
             "pays": "Paese (clicca qui per selezionare un Paese)",
             "infoMontPaiement": "Informazioni sull'importo",
-            "montant": "importo",
+            "montant": "Importo",
             "numRef": "Numero di riferimento (non deve contenere spazi tra i numeri)",
             "infoFacture": "Dati fattura (facoltativo)",
             "infoSupp": "Informazioni aggiuntive (facoltative)",
-            "valider": "convalidare",
+            "valider": "Convalidare",
             "effacer": "Pulire"
         },
         "modale": {
@@ -43,7 +43,7 @@
             "numDeRue": "Il numero civico è obbligatorio.",
             "codePostal": "Il'CAP' è obbligatorio.",
             "ville": "La città è obbligatorio.",
-            "pays": "la selezione de un paese è obbligatoria",
+            "pays": "La selezione de un paese è obbligatoria",
             "montant": "Il Importo è obbligatorio.",
             "numRef": "Il numero di riferimento è obbligatorio."
         },
