WIP  Modale Finalisé

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -21,7 +21,7 @@
             "effacer": "Effacer"
         },
         "modale": {
-            "verifConfirm": "Page de vérification.",
+            "verifConfirm": "Page de vérification",
             "pays": "Pays",
             "numRef": "Numéro de référence",
             "infoSupp": "Information supplémentaires",
